--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
       </ul>
       <div class="separator"></div>
       <div class="social-list">
-        <a href="#" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a>
-        <a href="#" class="social-link"><ion-icon name="logo-github"></ion-icon></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/nngahoang/"
+          class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://github.com/kiki092002" class="social-link"><ion-icon
+            name="logo-github"></ion-icon></a>
         <a href="#" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
     </div>
