--- a/index.html
+++ b/index.html
@@ -112,13 +112,91 @@
         <h2 class="article-title h2">Experience</h2>
         <div class="separator-section"></div>
         <section class="experience-text">
-          <p>This is the Experience section content.</p>
+          <!-- Experience Item 1 -->
+          <div class="experience-card">
+            <div class="experience-image-container">
+              <img src="assets/images/experience-img.jpeg" alt="Converge Media Project Screenshot"
+                class="experience-image">
+              <div class="overlay">
+                <a href="https://www.figma.com/proto/fTqhKLj42xs24IrSnBQvIq/High-Fidelity-Prototypes?type=design&node-id=3-2&t=j17V43nV1sEz1eWZ-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=3%3A2&mode=design"
+                  target="_blank" class="overlay-link">
+
+                </a>
+              </div>
+            </div>
+            <div class="experience-details">
+              <p class="experience-year">Sep 2021 - June 2023</p>
+              <p class="experience-technologies">XML • BrightScript • Azure Blob Storage • Azure Media Service</p>
+              <h3 class="experience-title">Full-stack Software Development Senior Capstone Project Engineer</h3>
+              <p class="experience-company">Converge Media Seattle</p>
+
+            </div>
+          </div>
         </section>
       </div>
-      <div id="Project" class="tabcontent">
-        <h2 class="article-title h2">Project</h2>
-        <div class="separator-section"></div>
 
+
+      <div id="Project" class="tabcontent">
+        <h2 class="article-title h2">Projects</h2>
+        <div class="separator-section"></div>
+        <section class="projects-grid">
+          <!-- Project 1 -->
+          <div class="project-card">
+            <div class="project-image-container">
+              <img src="assets/images/hiking.jpg" alt="Hiking Mobile Application Mockup" class="project-image">
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">Hiking Mobile Application Mockup</h3>
+              <p class="project-role"><a
+                  href="https://www.figma.com/design/vSQ3f4rUKrOHQfChIeGS8f/Trailz?node-id=0-1&t=yJW0V9HQ28zidlRU-1"
+                  target="_blank">Live Demo</a></p>
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="project-card">
+            <div class="project-image-container">
+              <img src="assets/images/todo.png" alt="To Do List Application" class="project-image">
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">The To Do List Application</h3>
+              <p class="project-role"><a href="https://github.com/kiki092002/ToDoList" target="_blank">GitHub</a></p>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="project-card">
+            <div class="project-image-container">
+              <img src="path/to/your/route-optimization-app.jpg" alt="Route Optimization Application"
+                class="project-image">
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">Route Optimization for Delivery Service Application</h3>
+              <p class="project-role"><a href="https://github.com/kiki092002/Delivery-Route-Optimization"
+                  target="_blank">GitHub</a></p>
+            </div>
+          </div>
+          <!-- Project 4 -->
+          <div class="project-card">
+            <div class="project-image-container">
+              <img src="path/to/your/cafe-api-app.jpg" alt="Cafe API Application" class="project-image">
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">The Cafe API Application</h3>
+              <p class="project-role"><a href="https://github.com/kiki092002/Cafe-APi" target="_blank">GitHub</a></p>
+            </div>
+          </div>
+          <!-- Project 5 -->
+          <div class="project-card">
+            <div class="project-image-container">
+              <img src="path/to/your/customer-feedback-chatbot.jpg" alt="Customer Feedback Chatbot"
+                class="project-image">
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">Customer Feedback Sentiment Analysis Chatbot</h3>
+              <p class="project-role"><a href="https://github.com/kiki092002/Customer-Feedback-Analysis"
+                  target="_blank">GitHub</a></p>
+            </div>
+          </div>
+        </section>
       </div>
       <div id="Contact" class="tabcontent contact-section">
         <h2 class="article-title h2 text-center">Contact</h2>
@@ -146,6 +224,10 @@
 
         </object>
       </div>
+
+
+    </div>
+
 
 
 
