--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Nga Hoang - Personal Portfolio</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/avatar-3.png" type="image/x-icon">
   <!-- custom css link -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
